--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,31 @@
 .App {
   text-align: center;
+  margin-top: 25px;
+  background-color: #204060;
+  min-height: 225px;
+  padding-top: 10px;
+  padding-bottom: 25px;
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
+.App_button {
+  background-color: green;
+  color: white;
+  cursor: pointer;
+  border: 2px solid white;
+  padding: 3px;
+  border-radius: 5px;
+}
+.App_button:hover{
+  background-color: white;
+  color: green;
+  /* border: 2px solid black; */
+
+
+ }
+/* 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +59,20 @@
   to {
     transform: rotate(360deg);
   }
+} */
+
+.App_inside {
+  width: 60%;
+  background-color: lightblue;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 25px;
+}
+
+.Datadisplay {
+  margin-top: 5px;
+  background-color: lightgreen;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
 }
